@@ -302,6 +302,7 @@ coordinate</li>
 <ul class="w3-ul">
 <li>New device tab for virtual RAW disk drive devices.</li>
 <li>Fixed crash when pasting text in the terminal.</li>
+<li>Configuration file version check on startup.</li>
 </ul>
 <!-- End content -->
 
