@@ -33,6 +33,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <ul class="w3-ul">
 <li>New device tab for virtual RAW disk drive devices.</li>
 <li>Fixed crash when pasting text in the terminal.</li>
+<li>Configuration file version check on startup.</li>
 </ul>
 <!-- End content -->
 
