@@ -34,7 +34,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <p>Crashes at start of the program are often caused by a corruped 
 configuration file. In this case the configuration file must be
-deletet.  The location of the file is platform dependent:</p>
+deleted.  The location of the file is platform dependent:</p>
 
 <table class="w3-table-all">
 <tr><th>Platform</th><th>Directory</th></tr>
@@ -103,6 +103,9 @@ with valid layout information. The default layout is used.</p>
 
 <p><b>Warning!</b> If the default layout does not match the
 current medium data corruption may occur!</p>
+
+<p><code>Your configuration files are of pyILPER version: XXX which is newer than the version you are running. The program might crash or mishehave. Do you want to continue?</code><br>
+You probably downgraded <em>pyILPER</em> to an older version. The current configuration files might contain data which are not compatible with the running version. To avoid problems, you should reset the configuration files. See the chapter above.</p>
 
 <h3 class="w3-text-teal">Further hints if the program crashes</h3>
 
